--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<nav class="navbar navbar-expand-lg navbar-dark fixed-top py-3 text-white navegacion-color">
 		<div class="container">
 			<a class="navbar-brand" href="#">— LTNM<b>2019</b> —</a>
+			<p>Hola este es el 2do commit</p>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
