--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 						<a class="nav-link" href="#catedra">Sobre la cátedra<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
+						<p>Hola este es el 3er commit</p>
 						<a class="nav-link" href="#experiencia">Experiencia</a>
 					</li>
 					<li class="nav-item">
