added new text to the index of barbara-final project

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#contacto">Contacto</a>
+						<p>Este es el commit final</p>
 					</li>
 				</ul>
 			</div>
